[bdist_wheel]
universal = 0

[metadata]
description-file = README.md

[tool:pytest]
testpaths = tests
norecursedirs =
    .git
    .tox
    .env
    dist
    build
python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short
    --flakes
pep8ignore =
    *.py E501 E402 E701 W503
    examples/*.py ALL
pep8maxlinelength = 79
flakes-ignore =
    examples/*.py ALL
